data/derived/sp14/progs/unify/prog1750.ml.out
Characters 8-19:
  let _ = digitsOfInt -1234;;
          ^^^^^^^^^^^
Error: This expression has type int -> int list
       but an expression was expected of type int
